--- a/app/build.gradle
+++ b/app/build.gradle
@@ -22,6 +22,12 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
+
+    sourceSets {
+        main {
+            jniLibs.srcDirs = ['libs']
+        }
+    }
 }
 
 dependencies {
@@ -36,4 +42,8 @@ dependencies {
     compile 'com.android.support:cardview-v7:23.1.1'
     implementation files('libs/alipaySdk-20170725.jar')
     implementation files('libs/libammsdk.jar')
+    implementation files('libs/AMap_Location_V3.8.0_20180201.jar')
+    implementation files('libs/Android_Map3D_SDK_V6.1.0_20180330.jar')
+    implementation files('libs/httpclient-4.2.5.jar')
+    implementation files('libs/httpcore-4.2.4.jar')
 }
