--- a/build.gradle
+++ b/build.gradle
@@ -10,6 +10,7 @@ buildscript {
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:3.0.0'
+        classpath 'com.jfrog.bintray.gradle:gradle-bintray-plugin:1.7.3'
         
 
         // NOTE: Do not place your application dependencies here; they belong
@@ -27,4 +28,18 @@ allprojects {
 
 task clean(type: Delete) {
     delete rootProject.buildDir
+}
+
+subprojects {
+    repositories {
+        jcenter()
+        mavenLocal()
+    }
+
+    version = '3.6.0'
+    group = 'com.journeyapps'
+
+    ext.androidBuildTools = '27.0.0'
+    ext.androidTargetSdk = 27
+    ext.zxingCore = 'com.google.zxing:core:3.3.2'
 }
