--- a/app/build.gradle
+++ b/app/build.gradle
@@ -22,12 +22,12 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
-
     sourceSets {
         main {
             jniLibs.srcDirs = ['libs']
         }
     }
+    buildToolsVersion '26.0.2'
 }
 
 dependencies {
