注册、登录、重置密码、我的订单ui

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -128,5 +128,6 @@
             android:name=".views.PublishCommentActivity"
             android:screenOrientation="portrait">
         </activity>
+        <activity android:name=".views.interfaces.MyOrderActivity" android:screenOrientation="portrait"/>
     </application>
 </manifest>
